--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     },
     "java.project.sourcePaths": [
         "Data Structure/Stack/java",
-        "Data Structure/Queue/java"
+        "Data Structure/Queue/java",
+        "Data Structure/Graph_Representation/java"
     ]
 }
