--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "java.project.sourcePaths": [
         "Data Structure/Stack/java",
         "Data Structure/Queue/java",
-        "Data Structure/Graph_Representation/java"
+        "Data Structure/Graph_Representation/java",
+        "Data Structure/Array/java"
     ]
 }
