--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Data Structure/Stack/java",
         "Data Structure/Queue/java",
         "Data Structure/Graph_Representation/java",
-        "Data Structure/Array/java"
+        "Data Structure/Array/java",
+        "Data Structure/Hashing/java"
     ]
 }
