--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,9 @@
     "java.project.sourcePaths": [
         "Data Structure/Stack/java",
         "Data Structure/Queue/java",
+        "Data Structure/Hashing/java",
         "Data Structure/Graph_Representation/java",
         "Data Structure/Array/java",
-        "Data Structure/Hashing/java"
+        "Data Structure/Binary_Search_Tree/java"
     ]
 }
