--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "Data Structure/Queue/java",
         "Data Structure/Hashing/java",
         "Data Structure/Graph_Representation/java",
+        "Data Structure/Binary_Search_Tree/java",
         "Data Structure/Array/java",
-        "Data Structure/Binary_Search_Tree/java"
+        "Data Structure/Linked_List/java"
     ]
 }
