--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,11 @@
     "java.project.sourcePaths": [
         "Data Structure/Stack/java",
         "Data Structure/Queue/java",
+        "Data Structure/Linked_List/java",
         "Data Structure/Hashing/java",
         "Data Structure/Graph_Representation/java",
         "Data Structure/Binary_Search_Tree/java",
         "Data Structure/Array/java",
-        "Data Structure/Linked_List/java"
+        "Data Structure/Heap/java"
     ]
 }
