trie insert search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,11 @@
         "Data Structure/Stack/java",
         "Data Structure/Queue/java",
         "Data Structure/Linked_List/java",
+        "Data Structure/Heap/java",
         "Data Structure/Hashing/java",
         "Data Structure/Graph_Representation/java",
         "Data Structure/Binary_Search_Tree/java",
         "Data Structure/Array/java",
-        "Data Structure/Heap/java"
+        "Data Structure/Trie/java"
     ]
 }
